--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3085,9 +3085,9 @@ fieldset[disabled] a.btn {
 }
 
 .btn-secondary {
-  color: #292b2c;
-  background-color: #fff;
-  border-color: #ccc
+  color: #fff;
+  background-color: #253C31;
+  border-color: #253C31
 }
 
 .btn-secondary:hover {
