--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -8,12 +8,12 @@
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse">
+          <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="/">Hello, Homer!</a>
               </li>
-              <li class="dropdown" id="navbarResponsive">
+              <li class="dropdown">
                   <input type="image" src="/assets/homermaggie.gif" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                     <a href="/library" class="dropdown-item">Manage Library</a>
