--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4864,7 +4864,12 @@ tbody.collapse.show {
 }
 
 .card-title {
-  margin-bottom: .75rem
+  margin-bottom: .75rem;
+  height: 2em
+}
+
+.card-text {
+  height: 2em
 }
 
 .card-subtitle {
