--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
                 <h6 class="card-title" style="color:#253C31">
                   <%= titles[i] %>
                 </h6>
-                <p class="card-text">
+                <p class="card-text" style="height: 51px">
                   By
                   <%= authors[i] %>
                 </p>
