--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,10 @@ html {
   -webkit-text-size-adjust: 100%
 }
 
+.link {
+  color: #253C31
+}
+
 body {
   margin: 0
 }
@@ -432,7 +436,7 @@ a {
 
 a:focus,
 a:hover {
-  color: #014c8c;
+  color: #fff;
   text-decoration: underline
 }
 
