--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -4,17 +4,11 @@
           <a class="navbar-brand navbar-brand-left" href="/">
             <img class="img-fluid" src="/assets/logo.png" width="210" height="60">
           </a>
-          <!-- <button class="navbar-toggler align-self-center" type="button" data-toggle="collapse" data-target="dropdownMenu2" aria-controls="dropdownMenu2" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button> -->
-          <div class="navbar-collapse">
+          <div class="navbar-collapse align-self-center">
             <ul class="nav navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="/">Hello, Homer!</a>
-              </li>
               <li class="dropdown">
                   <input type="image" src="/assets/homermaggie.gif" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-<div class="collapse dropdown-menu" aria-labelledby="dropdownMenu2">
+                  <div class="collapse dropdown-menu" aria-labelledby="dropdownMenu2">
                     <a href="/library" class="dropdown-item">Manage Library</a>
                     <a href="/connections" class="dropdown-item">Manage Connections</a>
                     <button class="dropdown-item">Logout</button>
