--- a/views/connections.ejs
+++ b/views/connections.ejs
@@ -80,7 +80,7 @@
 
 <script>
     $(function () {
-
+        $('#TEST').remove();
         $('.search-field').hide();
 
         $('.fire-button').on('click', function (event) {
@@ -96,32 +96,32 @@
                 },
                 success: function (results) {
                     let newResults = JSON.parse(results);
-                    let name = $('.search-name').text(newResults[0].first_name + (' ') + (
-                        newResults[0].last_name));
-                    let email = $('.search-email').text(newResults[0].email);
+                    
+                    let name = $('.search-name').text(newResults.first_name + (' ') + (
+                        newResults.last_name));
+                    let email = $('.search-email').text(newResults.email);
                     let addFriend = $('.friend-add').append(
-                        '<i class="fa fa-plus-square-o friend-add" data-my-id="<%= userId[0] %>" aria-hidden="true" p-2></i>'
-                    ).attr('data-friend-id', newResults[0].id);
-
-                    $('.search-row').append(name, email, addFriend);
-
-                    $('.friend-add').on('click', function () {
+                        '<i class="fa fa-plus-square-o friend-add" id="TEST" data-my-id="<%= userId[0] %>" aria-hidden="true" p-2></i>'
+                    ).attr('data-friend-id', newResults.id);
+                    
+                    $('#TEST').on('click', function (event) {
+                        event.preventDefault();
                         var myId = 1;
-                        var friendId = Number($(this).data('friend-id'));
+                        var friendId = newResults.id //Number($(this).data('friend-id'));
                         
-                        //$('.search-friend').reset();
                         $.ajax({
                             type: 'post',
                             url: '/connections/add',
                             data: {
-                                myId,
-                                friendId
+                                myId: myId,
+                                friendId: friendId
                             },
                             success: function (userData) {
                                 let friends = JSON.parse(userData);
                                 console.log(friends);
-                                $('.search-friend').empty();
-                                $('.search-field').empty();
+                                
+                                $('#TEST').remove();
+                                $('.search-field').hide();
                                 $(".list-group").append(
                                     '<li class="list-group-item flex-column justify-content-between"></li>'
                                 );
@@ -163,7 +163,7 @@
                                 });
                             }
                         });
-                        $('.search-row').remove();
+                        //$('.search-row').remove();
                     });
                 }
             })
@@ -173,7 +173,7 @@
             const groupItem = this;
             $(this).on("click", ".delete-friend", function () {
                 const user = Number($(this).data('user-id'));
-
+                console.log(user);
                 // const email = ($(this).data('email-id'));
 
                 $.ajax({
